plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'capstone'
version = '1.0'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

dependencies {
    // JUnit 5 API & Engine
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'

    // Required for Gradle JUnit Platform launcher
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.0'

    // Mockito & JUnit 5 Integration
    testImplementation 'org.mockito:mockito-core:5.11.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    // Apache Lucene
    implementation 'org.apache.lucene:lucene-core:10.2.0'
    implementation 'org.apache.lucene:lucene-analysis-common:10.2.0'
}

test {
    useJUnitPlatform()
}

javafx {
    version = "21.0.7"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

application {
    mainClass = 'capstone.documenttaggingsystem.TaggingApp'
}
